fix z-index for user image

--- a/src/assets/styles/cmps/_NavBar.scss
+++ b/src/assets/styles/cmps/_NavBar.scss
@@ -12,6 +12,8 @@
             .user-menu-options {
                 position: absolute;
                 right: 0;
+                z-index: 2;
+                
                 padding: 5px 10px;
                 margin-top: 3px;
 
